# space_api_django

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
indication/: admin.py  apps.py  models.py  urls.py
indication/migrations/: 0001_initial.py  0002_alter_indication_options_alter_indication_user.py
indication/serializators/: indication.py  user.py
indication/views/: indication.py  user.py
pg_data/base/1/: 2619  2840  pg_internal.init
pg_data/base/5/: pg_internal.init
pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
postgres_data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres_data/base/5/: 1247  1249  1259  16384  16385  16386  16387  16390  16391  16392  16393  16394  16395  16396  16398  16400  16401  16402  16403  16404  16406  16408  16410  16412  16414  (+79 more)
postgres_data/global/: 1260  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
settings/: base.py  docker_version.py
space/: admin.py  models.py  serializers.py  urls.py  views.py
space/migrations/: 0001_initial.py  0002_alter_station_options.py
space_api/: asgi.py  urls.py  wsgi.py
tests/: conftest.py  fixtures.py
tests/factories/: indication.py  station.py  user.py
tests/indication/: test_indication_detail.py  test_indication_list.py
tests/space/: space_state_test.py  test_station_create.py  test_station_detail.py  test_station_list.py
tests/user/: test_user_create.py  test_user_detail.py  test_user_list.py
